updating/simplifying cache implementation